# super-brain

./: .gitignore  CLAUDE.md  EVAL_HISTORY.md  eval_conversation.py  eval_conversation_results.json  eval_conversation_results_v01.json  eval_conversation_results_v02.json  eval_conversation_results_v03.json  eval_conversation_results_v04_backup.json  eval_conversation_results_v05.json  eval_conversation_results_v06.json  eval_conversation_results_v07.json  eval_conversation_results_v08.json  eval_conversation_results_v09.json  eval_conversation_results_v10.json  eval_conversation_results_v11.json  eval_conversation_results_v12.json  eval_conversation_results_v13.json  eval_conversation_results_v14.json  eval_conversation_results_v15.json  eval_conversation_results_v16.json  eval_conversation_results_v17.json  eval_conversation_results_v18.json  eval_conversation_results_v19.json  eval_conversation_results_v20.json  eval_conversation_results_v21.json  eval_conversation_results_v22.json  eval_conversation_results_v28_5p.json  eval_conversation_results_v30.json  eval_conversation_results_v32.json  eval_conversation_results_v321.json  eval_conversation_results_v321_10p.json  eval_conversation_results_v33_10p.json  eval_conversation_results_v33_iter1.json  eval_conversation_results_v33_iter2.json  eval_conversation_results_v33_iter4.json  eval_conversation_results_v33_iter5.json  eval_literary.py  eval_literary_v2.py  eval_personality.py  (+17 more)
data/: comparison_old_vs_new.json
scripts/: compare_pipeline.py  extract_literary_dialogue.py  full_comparison.py  generate_literary_gt.py  (+3 more)
(+170 files in other folders)
